# cmake-practice

./: .gitignore  README.md
Demo1/: CMakeLists.txt
Demo2/: main.cc
Demo3/: CMakeLists.txt  main.cc
Demo3/math/: CMakeLists.txt
Demo4/: CMakeLists.txt
Demo4/math/: CMakeLists.txt
